--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cypress": "^12.13.0",
     "cypress-wait-until": "^1.7.2",
     "esbuild": "^0.17.19",
+    "eslint-plugin-cypress": "^2.13.3",
     "prettier": "^2.8.3",
     "typescript": "^4.9.5"
   },
