--- a/.github/workflows/On_Demand_Test.yml
+++ b/.github/workflows/On_Demand_Test.yml
@@ -33,8 +33,9 @@ jobs:
         containers: [1]
     steps:
       - uses: actions/checkout@v3
-        env:
+      - env:
           TEST_1: ${{ secrets.TEST_1}}
+        run: echo "$TEST_1"
       - name: save git values
         run: |
           echo COMMIT_INFO_BRANCH=$(git rev-parse --abbrev-ref HEAD) >> $GITHUB_ENV
@@ -45,8 +46,6 @@ jobs:
           echo COMMIT_INFO_TIMESTAMP=$(git show -s --pretty=%ct) >> $GITHUB_ENV
           echo COMMIT_INFO_REMOTE=$(git config --get remote.origin.url) >> $GITHUB_ENV
           rm -rf .git
-      - run: echo "*****************"
-      - run: echo "$TEST_1"
       - run: npm install --force
       - name: 'Tests'
         uses: cypress-io/github-action@v4.2.1
