--- a/.github/workflows/On_Demand_Test.yml
+++ b/.github/workflows/On_Demand_Test.yml
@@ -1,5 +1,8 @@
 name: On Demand Test
 
+env:
+  TEST_1: ${{ secrets.TEST_1}}
+
 on:
   workflow_dispatch:
     inputs:
@@ -33,9 +36,7 @@ jobs:
         containers: [1]
     steps:
       - uses: actions/checkout@v3
-      - env:
-          TEST_1: ${{ secrets.TEST_1}}
-        run: echo "$TEST_1"
+      - run: echo "$TEST_1"
       - name: Dump job context
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
