--- a/.github/workflows/On_Demand_Test.yml
+++ b/.github/workflows/On_Demand_Test.yml
@@ -59,9 +59,8 @@ jobs:
       - name: 'Tests'
         env:
           CYPRESS_TEST_1: ${{ secrets.TEST_1 }}
-        uses: cypress-io/github-action@v4.2.1
-      - run: |
-          echo "$CYPRESS_TEST_1"
+        run: echo "$CYPRESS_TEST_1"
+      - uses: cypress-io/github-action@v4.2.1
         with:
           install: false
           command: npx cypress run -e tags="@${{ github.event.inputs.test-tag }}" --browser ${{ github.event.inputs.browser }}
